# Bird

./: LICENSE  README.md
SIEM/: __init__.py  app_groq.py  database.py  requirements.txt  system_metrics.db
omnisec-proto/: certs.sh
omnisec-proto/agent/: Cargo.toml
omnisec-proto/agent/src/: main.rs
omnisec-proto/infra/: commandeImportante.txt  docker-compose.yml
omnisec-proto/infra/certs/: ca.crt  ca.key  elastic.crt  elastic.key
omnisec-proto/infra/logstash/pipeline/: logstash.conf
omnisec-proto/infra/tests/: pipeline_tests.sh  simple_pipeline_test.sh  test_all.sh
