[package]
name = "agent"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono      = { version = "0.4", features = ["serde"] }
anyhow      = "1.0"
rdkafka = { version = "0.30", features = ["tokio"] }
hostname = "0.3"
futures = "0.3"

